--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@wavesurfer/react": "^1.0.8",
-    "next": "15.1.6",
+    "next": "^15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
